apps/copyparty/samba-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samba
  namespace: copyparty
  labels:
    app: samba
spec:
  type: NodePort
  ports:
  - name: netbios
    port: 139
    targetPort: 139
    nodePort: 30139
  - name: smb
    port: 445
    targetPort: 445
    nodePort: 30445
  selector:
    app: samba
