apps/copyparty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: copyparty
spec:
  selector:
    app: copyparty
  ports:
  - name: http
    port: 3923
    targetPort: 3923
    protocol: TCP
  type: ClusterIP
