apps/copyparty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  namespace: copyparty
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: copyparty
      port:
        number: 3923
  tls:
  - hosts:
    - copyparty
